[Octave] Add check, if Octave can have write in temporary dir

BUG: 420959
FIXED-IN: 20.07.70